--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
@@ -29,4 +29,97 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.7.1'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'com.youth.banner:banner:1.4.10'
+    implementation files('libs/alipaySdk-20180601.jar')
+    implementation 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:+'
+}
+
+apply plugin: 'com.mob.sdk'
+
+MobSDK {
+    appKey "替换为mob官方申请的appkey"
+    appSecret "替换为mob官方申请的appkey对应的appSecret"
+    ShareSDK {
+        devInfo {
+            SinaWeibo {
+                id 1
+                sortId 1
+                appKey "568898243"
+                appSecret "38a4f8204cc784f81f9f0daaf31e02e3"
+                callbackUri "http://www.sharesdk.cn"
+                shareByAppClient true
+                enable true
+            }
+
+            TencentWeibo {
+                id 2
+                sortId 2
+                appKey "801307650"
+                appSecret "ae36f4ee3946e1cbb98d6965b0b2ff5c"
+                callbackUri "http://sharesdk.cn"
+                enable true
+            }
+
+            QZone {
+                id 3
+                sortId 3
+                appId "100371282"
+                appKey "aed9b0303e3ed1e27bae87c33761161d"
+                shareByAppClient true
+                bypassApproval false
+                enable true
+            }
+
+            QQ {
+                id 7
+                sortId 7
+                appId "100371282"
+                appKey "aed9b0303e3ed1e27bae87c33761161d"
+                shareByAppClient true
+                bypassApproval false
+                enable true
+            }
+
+
+            /* Wechat微信和WechatMoments微信朋友圈的appid是一样的；
+      注意：开发者不能用我们这两个平台的appid,否则分享不了
+      微信测试的时候，微信测试需要先签名打包出apk,
+      sample测试微信，要先签名打包，keystore在sample项目中，密码123456
+      BypassApproval是绕过审核的标记，设置为true后AppId将被忽略，故不经过
+      审核的应用也可以执行分享，但是仅限于分享文字和图片，不能分享其他类型，
+      默认值为false。此外，微信收藏不支持此字段。wx4868b35061f87885
+      <!--要分享微信小应用程序时用userName,path-->*/
+            Wechat {
+                id 4
+                sortId 4
+                appId "wx4868b35061f87885"
+                appSecret "64020361b8ec4c99936c0e3999a9f249"
+                userName "gh_afb25ac019c9"
+                path "pages/index/index.html?id=1"
+                withShareTicket true
+                miniprogramType 0
+                bypassApproval false
+                enable true
+            }
+
+            WechatMoments {
+                id 5
+                sortId 5
+                appId "wx4868b35061f87885"
+                appSecret "64020361b8ec4c99936c0e3999a9f249"
+                bypassApproval false
+                enable true
+            }
+
+            WechatFavorite {
+                id 6
+                sortId 6
+                appId "wx4868b35061f87885"
+                appSecret "64020361b8ec4c99936c0e3999a9f249"
+                bypassApproval false
+                enable true
+            }
+
+
+        }
+    }
 }
