--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,7 +45,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
-    implementation 'com.github.bumptech.glide:glide:4.7.1'
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'com.youth.banner:banner:1.4.10'
     implementation files('libs/alipaySdk-20180601.jar')
