微帮帮布局搭建

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -73,6 +73,7 @@
             android:launchMode="singleTop"/>
         <activity android:name=".aty.home.PayMemberAty" />
         <activity android:name=".aty.home.ContactCustomerAty" />
+        <activity android:name=".aty.member.RankingListAty" />
 
 
     </application>
