微帮帮布局搭建

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -75,6 +75,8 @@
         <activity android:name=".aty.home.ContactCustomerAty" />
         <activity android:name=".aty.member.RankingListAty" />
         <activity android:name=".aty.personal.MembershipListAty" />
+        <activity android:name=".aty.home.NoticeAty" />
+        <activity android:name=".aty.home.NoticeDetailsAty" />
 
 
     </application>
