微帮帮布局搭建

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -78,6 +78,7 @@
         <activity android:name=".aty.personal.MembershipListAty" />
         <activity android:name=".aty.home.NoticeAty" />
         <activity android:name=".aty.home.NoticeDetailsAty" />
+        <activity android:name=".aty.member.TaskDetailsAty" />
 
 
     </application>
