--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,8 +54,8 @@ dependencies {
     implementation 'com.android.support:cardview-v7:27.1.1'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'com.alibaba:fastjson:1.2.51'
-    implementation 'com.lzy.widget:imagepicker:0.6.1'
     implementation 'com.android.support:support-v4:27.1.1'
+    implementation project(':imagepicker')
 }
 
 apply plugin: 'com.mob.sdk'
