--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,46 +65,6 @@ MobSDK {
     appSecret "fd7b4a2036f354568006d0e859289c78"
     ShareSDK {
         devInfo {
-            SinaWeibo {
-                id 1
-                sortId 1
-                appKey "568898243"
-                appSecret "38a4f8204cc784f81f9f0daaf31e02e3"
-                callbackUri "http://www.sharesdk.cn"
-                shareByAppClient true
-                enable true
-            }
-
-            TencentWeibo {
-                id 2
-                sortId 2
-                appKey "801307650"
-                appSecret "ae36f4ee3946e1cbb98d6965b0b2ff5c"
-                callbackUri "http://sharesdk.cn"
-                enable true
-            }
-
-            QZone {
-                id 3
-                sortId 3
-                appId "100371282"
-                appKey "aed9b0303e3ed1e27bae87c33761161d"
-                shareByAppClient true
-                bypassApproval false
-                enable true
-            }
-
-            QQ {
-                id 7
-                sortId 7
-                appId "100371282"
-                appKey "aed9b0303e3ed1e27bae87c33761161d"
-                shareByAppClient true
-                bypassApproval false
-                enable true
-            }
-
-
             /* Wechat微信和WechatMoments微信朋友圈的appid是一样的；
       注意：开发者不能用我们这两个平台的appid,否则分享不了
       微信测试的时候，微信测试需要先签名打包出apk,
@@ -116,8 +76,8 @@ MobSDK {
             Wechat {
                 id 4
                 sortId 4
-                appId "wx4868b35061f87885"
-                appSecret "64020361b8ec4c99936c0e3999a9f249"
+                appId "wx9197c855d2953ff9"
+                appSecret "0a9d109baddf3e8377c8d416a5833da9"
                 userName "gh_afb25ac019c9"
                 path "pages/index/index.html?id=1"
                 withShareTicket true
@@ -129,17 +89,8 @@ MobSDK {
             WechatMoments {
                 id 5
                 sortId 5
-                appId "wx4868b35061f87885"
-                appSecret "64020361b8ec4c99936c0e3999a9f249"
-                bypassApproval false
-                enable true
-            }
-
-            WechatFavorite {
-                id 6
-                sortId 6
-                appId "wx4868b35061f87885"
-                appSecret "64020361b8ec4c99936c0e3999a9f249"
+                appId "wx9197c855d2953ff9"
+                appSecret "0a9d109baddf3e8377c8d416a5833da9"
                 bypassApproval false
                 enable true
             }
