--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     implementation 'com.alibaba:fastjson:1.2.51'
     implementation 'com.android.support:support-v4:27.1.1'
     implementation project(':imagepicker')
+    implementation files('libs/alipaySdk-20180601.jar')
 }
 
 apply plugin: 'com.mob.sdk'
@@ -105,7 +106,7 @@ MobSDK {
     }
     PaySDK {
         info {
-            AliPay {}
+//            AliPay {}
             Wechat {}
         }
     }
