--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,18 @@ dependencies {
     implementation 'com.android.support:support-v4:27.1.1'
     implementation project(':imagepicker')
     implementation files('libs/alipaySdk-20180601.jar')
+    implementation 'com.android.support:support-v4:27.1.1'
+}
+
+configurations.all {
+    resolutionStrategy.eachDependency { DependencyResolveDetails details ->
+        def requested = details.requested
+        if (requested.group == 'com.android.support') {
+            if (!requested.name.startsWith("multidex")) {
+                details.useVersion '27.1.1'
+            }
+        }
+    }
 }
 
 apply plugin: 'com.mob.sdk'
